select fixes & checkbox

--- a/src/Select.scss
+++ b/src/Select.scss
@@ -10,7 +10,7 @@
     transition: background 0s ease-out 0s;
 
     background-image: linear-gradient(#707cd2, #707cd2),
-      linear-gradient(rgba(120, 130, 140, 0.13), rgba(120, 130, 140, 0.13));
+    linear-gradient(rgba(120, 130, 140, 0.13), rgba(120, 130, 140, 0.13));
     border: 0;
     border-radius: 0;
     box-shadow: none;
@@ -19,10 +19,36 @@
 
   .select__control--is-focused {
     background-image: linear-gradient(#707cd2, #707cd2),
-      linear-gradient(rgba(120, 130, 140, 0.13), rgba(120, 130, 140, 0.13)) !important;
+    linear-gradient(rgba(120, 130, 140, 0.13), rgba(120, 130, 140, 0.13)) !important;
 
     background-size: 100% 2px, 100% 1px;
     outline: 0;
     transition-duration: 0.3s;
+  }
+
+  .select__indicator {
+    padding: 6px;
+  }
+
+  .select__placeholder {
+    padding-top: 2px;
+    opacity: 0.9;
+  }
+
+  .select__multi-value:first-child {
+    margin-left: 0;
+  }
+
+  .select__multi-value__label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .select__input {
+    display: inline-flex !important;
+    align-items: center;
+    height: 100%;
+    padding-left: 3px;
   }
 }
